--- a/style.css
+++ b/style.css
@@ -75,7 +75,9 @@ footer {
   margin-bottom: 100px;
 }
 footer img {
+  border: #1a1a1a9f solid 1px;
   border-radius: 5px;
+  box-shadow: 0px 0px 20px 10px #4d969ba1;
 }
 .description {
   color: white;
@@ -111,5 +113,8 @@ footer img {
     display: block;
     margin-left: 50%;
     transform: translate(-50%);
+  }
+  .description h3 {
+    margin-top: 20px;
   }
 }
